# Reversi

./: CMakeLists.txt  CellButton.cpp  CellButton.h  GameEngine.cpp  GameEngine.h  GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  MenuWidget.cpp  MenuWidget.h  build.sh
